# python-toy

jobs/: Readme.md
jobs/H_set/weekly/: query.py  runner.py  test.sh
jobs/LP_set/daily/: query.py  runner.py  test.sh
jobs/LP_set/metadata/: query.py  runner.py  test.sh
jobs/LP_set/metadata/R/: build_lpmgt_cell_build_meta.R  build_lpmgt_cell_meta.R
jobs/LP_set/weekly/: query.py  runner.py  test.sh
jobs/dbp_main/key/: .gitignore  runner.py  test.sh
jobs/dbp_main/key/address_refiner/: .gitignore  CMakeLists.txt
jobs/dbp_main/key/address_refiner/data/: update.sh
jobs/dbp_main/key/address_refiner/src/: CMakeLists.txt  main.cc
jobs/dbp_main/key/address_refiner/utility/: ExtractAddress.py  valgrind.sh
jobs/dbp_main/key/wsdl_invoker_client/: build.gradle  settings.gradle
jobs/dbp_main/main/: query.py  runner.py  test.sh
jobs/demo_set/pcl/: base-pcl.properties
jobs/demo_set/pcl/demo_set/: s001_dml_dewip_cust_annv_lst.job  s001_dml_dewip_svc.job  s001_dml_dewip_svc_fmly_rel.job  s002_dml_demo_set_001.job
jobs/demo_set/pcl/sql/: 1.sql  2.sql  3.sql  s001_dml_dewip_cust_annv_lst.sql  s001_dml_dewip_svc.sql  s001_dml_dewip_svc_fmly_rel.sql  s002_dml_demo_set_001.sql
jobs/demo_set/pcl/test_data/: test_data.job  test_data1.job  test_data2.job  test_data3.job
jobs/pay_set/: daily.py  dbapi.py  monthly.py  runner.py  setup.py  sql.py  util.py
sampler/: .gitignore  Readme.md  filter.sh  main.py
sampler/conf/: dev.yaml  jc_piwik.yaml  local.yaml  product.yaml
sampler/tests/: server.py
(+19 files in other folders)
